--- a/app/code/RH/CustomPayment/composer.json
+++ b/app/code/RH/CustomPayment/composer.json
@@ -1,16 +1,11 @@
 {
-    "name": "rh/module-custompayment",
-    "description": "RH Custom Payment Method",
+    "name": "rh/custompayment",
+    "description": "RH Custom Payment",
+    "version": "1.0.0",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
-        "magento/module-sales": "100.0.*",
-        "magento/module-checkout": "100.0.*",
-        "magento/module-payment": "100.0.*",
-        "magento/framework": "100.0.*",
-        "magento/magento-composer-installer": "100.0.*"
+        "php": "~5.6.5|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.1.3|~7.2.0"
     },
     "type": "magento2-module",
-    "version": "100.0.0",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
